# r_lit

./: .gitignore  .justfile  CHANGELOG.md  CHECKLIST.md  CICD_PLATFORM_COMPARISON.md  CLAUDE.md  CLI_OPTIMIZATION_SUMMARY.md  COST_UPDATE.md  FINAL_COST_ANALYSIS.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SUMMARY.md  MUSL_BENEFITS.md  QUICKSTART.md  README.md  README_CN.md  TOOL_CATALOG.md  chat.ctx  install.sh  llms.txt  llms_cn.txt  release-metadata.json  测试和文档完善总结.md
bulk_upload/: .gitignore  .justfile  CLAUDE.md  Cargo.toml  DEV.md  LLVM.md  README.md  README_CN.md  llms.txt  llms_cn.txt
bulk_upload/src/: error.rs  main.rs
bulk_upload/src/subcmd/: jp.rs  jq.rs
bulk_upload/tests/: s3_config_tests.rs  s3_key_tests.rs  url_extraction_tests.rs
crates/murmur/: CLAUDE.md  Cargo.toml  README.md  README_CN.md  diagnose_mdns.sh  llms.txt  llms_cn.txt  quick_start.sh  test_auto.sh  test_collaboration_guide.sh  test_collaboration_interactive.sh  test_cross_machine.sh  test_lan.sh  test_manual_guide.sh  test_mdns.py  test_mdns_v2.py  test_remote.sh
crates/murmur/docs/: file_sharing_mechanism.html
crates/murmur/examples/: basic.rs  benchmark.rs  chat_room.rs  clean_test.sh  cli_dev_scope.rs  file_sync.rs  group_chat.rs  local_discovery.rs  manual_test.rs  shared_kv.rs  (+1 more)
deskpet/: .gitignore  .justfile  Cargo.toml  README.md  README_CN.md  llms.txt  llms_cn.txt
deskpet/assets/: blast.glb  blast.result.json  block.glb  block.result.json
deskpet/macos/: AppIcon.icns  Info.plist  deskpet.entitlements
deskpet/src/: error.rs  main.rs  notify.rs
deskpet/tools/: fal_meshy.py  glb_shrink_texture.py  meshy_image_to_3d.py
gamereel/: .gitignore  Cargo.toml  README.md  README_CN.md  llms.txt  llms_cn.txt
gamereel/benches/: baseline.sh  m1.sh  m2.sh  m3.sh
gamereel/docs/: optimization-log.md
group_vibe_workbench/: .env.example  .gitignore  .justfile  CLAUDE.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  WEBVIEW_INTEGRATION.md  call_glm5.py  llms.txt  llms_cn.txt  prompt_context.txt  test_collaboration.sh  test_debug_multi.sh  test_dev.sh  test_multi_instance.sh  test_release_single.sh
group_vibe_workbench/docs/: CLICK_EVENT_FIX.md  COLLABORATION_IMPLEMENTATION.md  CONFIGURATION.md  DEPENDENCY_OPTIMIZATION.md  DEV_MODE_GUIDE.md  GLM5_REQUEST.md  GUI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LOGIN_FIX.md  SERVICE_DISCOVERY_SUMMARY.md  SESSION_SUMMARY.md  UI_ARCHITECTURE.md  USAGE.md  USER_LOGIN_IMPLEMENTATION.md  WEBVIEW_ANALYSIS.md  WEBVIEW_CHALLENGE.md
group_vibe_workbench/macos/: Info.plist  group_vibe_workbench.entitlements
group_vibe_workbench/src/: config.rs  controller.rs  error.rs  instance_lock.rs  main.rs  model.rs  shared_file.rs  swarm_manager.rs  user_db.rs
group_vibe_workbench/workbench_data/: user.db
group_vibe_workbench/workbench_data_dev_0/: user.db
group_vibe_workbench/workbench_data_dev_1/: user.db
img_resize/: .gitignore  .justfile  Cargo.toml  DEV.md  LLVM.md  README.md  README_CN.md  dpm.yml  hfrog.yml  llms.txt  llms_cn.txt  makefile
img_resize/src/: cli.yaml  error.rs  img_exec.rs  main.rs  re_tp.rs
img_resize/test/: config_android.yaml
img_resize/tests/: config_tests.rs  resize_tests.rs
looplog/: .justfile  Cargo.toml  README.md  README_CN.md  WECHAT_AI_DEBUG_CN.md  llms.txt  llms_cn.txt
looplog/src/: db.rs  error.rs  ingest.rs  main.rs  meta.rs  output.rs  protocol.rs  server.rs  storage.rs
maquette/: .gitignore  Cargo.toml  README.md  README_CN.md  llms.txt  llms_cn.txt
maquette/macos/: Info.plist  maquette.entitlements
maquette/scripts/: bench_rustyme_vs_celery.py  celery_bench_worker.py  gen-mc-blocks.sh  rustyme_io_file.lua  rustyme_long_request.lua  rustyme_payload.lua  sleep_http_server.py
maquette/src/: autosave.rs  block_composer.rs  block_library.rs  block_meta.rs  camera.rs  cloud_status.rs  export.rs  export_dialog.rs  float_window.rs  fonts.rs  grid.rs  history.rs  lib.rs  main.rs  mesher.rs  multiview.rs  notify.rs  palette_io.rs  preview_mesh.rs  project.rs  render.rs  scene.rs  session.rs  slot_texgen.rs  texgen.rs  texture_meta.rs  texture_registry.rs  toon.rs  ui.rs
maquette/tests/: cli.rs
mj_atlas/: .gitignore  Cargo.toml  README.md  README_CN.md  llms.txt  llms_cn.txt
mj_atlas/docs/: GUI_DESIGN.md  HFROG.md  INCREMENTAL.md  INSPECT.md  POLYGON.md
mj_atlas/examples/: gen_sprites.py  run_demo.sh
mj_atlas/src/: config.rs  connection.rs  error.rs  hfrog.rs  main.rs  preview.rs  runlog.rs
murmur/: BROADCAST.md  Cargo.toml  INTEGRITY.md  ROADMAP.md  STORAGE_BACKENDS.md
murmur/examples/: SHARED_KV.md  shared_kv.rs
murmur/src/: election.rs  error.rs  lib.rs  network.rs  storage.rs  storage_trait.rs  sync.rs  vector_clock.rs
omniplan_covers_ding/: .justfile  Cargo.toml  DEV.md  LLVM.md  README.md  README_CN.md  llms.txt  llms_cn.txt
omniplan_covers_ding/src/: ctx.rs  error.rs  main.rs
omniplan_covers_ding/tests/: csv_tests.rs
pgpour/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md  config.example.yml  docker-compose.yml  llms.txt  llms_cn.txt
pgpour/.cargo/: config.toml
pgpour/examples/: config.example.yml  config.fanout.example.yml  config.multi-kafka.example.yml  fanout_produce.rs
pgpour/sql/: setup_publication.sql
pgpour/src/: config.rs  kafka_destination.rs  lib.rs  main.rs  metrics.rs  ssh_tunnel.rs
textexture/: .justfile  Cargo.toml  README.md  README_CN.md  blender_tung.py  llms.txt  llms_cn.txt
textexture/src/: bmfont.rs  color.rs  error.rs  font.rs  main.rs  runlog.rs
ui-trim/: .justfile  CLAUDE.md  Cargo.toml  README.md  README_CN.md  llms.txt  llms_cn.txt
ui-trim/examples/: benchmark.rs  smoke.rs
ui-trim/src/: lib.rs  main.rs
ui-trim/tests/: cli_smoke.rs
video-generator/: .gitignore  Cargo.toml  README.md  README_CN.md  llms.txt  llms_cn.txt
video-generator/benches/: baseline.sh  m1.sh  m2.sh  m3.sh
video-generator/demo/: .gitignore  Cargo.toml
video-generator/docs/: optimization-log.md  rename-and-restructure-plan.md
video-generator/movie-maker/: .justfile  Cargo.toml
(+479 files in other folders)
