[package]
name = "bulk_upload"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
futures = "0.3"
log = "0.4"
fern = "0.7"
humantime = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
