[package]
name = "group_vibe_workbench"
version = "0.1.0"
edition = "2021"

[dependencies]
# GPUI Components with WebView support
# Note: gpui-component includes gpui as a dependency, but we need to add it explicitly
gpui-component = { version = "0.5", features = ["webview"] }
gpui = "0.2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Logging and tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fern = "0.7"
humantime = "2"

# Environment variables
dotenv = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
