[package]
name = "group_vibe_workbench"
version = "0.1.0"
edition = "2021"

[dependencies]
# GPUI Components
gpui-component = "0.5"
gpui = "0.2"

# CLI argument parsing (只需要 derive)
clap = { version = "4", features = ["derive"] }

# Error handling (只需要 thiserror)
thiserror = "2"

# Async runtime (精简 features)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], default-features = false }

# P2P collaboration library
murmur = { path = "../crates/murmur" }

# Logging (只用 log + fern，不需要 tracing)
log = "0.4"
fern = "0.7"
humantime = "2"

# Serialization (只需要 serde_json)
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }

# UUID generation (只需要 v4)
uuid = { version = "1", features = ["v4"], default-features = false }

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Database
redb = "2"

# File watching
notify = "6.1"

# Signal handling for dev mode
ctrlc = "3.4"

# Configuration
dotenv = "0.15"

# System directories
dirs = "5"

# Unix-specific dependencies for file locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
