[package]
name = "img_resize"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
imageproc ="*"
clap = { version = "^4", features=["cargo"]}
thiserror = "^1"
rand = "0.8.5"
walkdir = "2"
infer = "0.15.0"

yaml-rust = "0.4.5"


[profile.release]
opt-level = 'z'
lto = true 
codegen-units = 1
panic = 'abort'