[package]
name = "img_resize"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
imageproc ="*"
clap = { version = "^4", features=["cargo", "derive"]}
thiserror = "^1"
rand = "0.8.5"
walkdir = "2"
infer = "0.15.0"
yaml-rust = "0.4.5"
log = "0.4.27"
# tinify-rs = { version = "1.4.2", features = ["async"] }  # Temporarily disabled for musl builds
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
fern = "0.7.1"
humantime = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
