[package]
name = "looplog"
version = "0.1.0"
edition = "2021"
description = "Local-first log intake and query CLI for AI-assisted debugging"

[features]
default = []
pure-rust-sqlite = []

[dependencies]
clap = { version = "^4", features = ["derive"] }
dirs = "5"
humantime = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tiny_http = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
