[package]
name = "mj_atlas"
version = "0.4.3"
edition = "2021"
description = "MJAtlas — game-ready texture atlas packer (UV-stable incremental, multi-component polygon mesh, manifest as first-class artifact: inspect/diff/verify/tag, optional hfrog mirror, Godot native output)"

[features]
default = []
gui = ["dep:eframe", "dep:egui", "dep:rfd"]

[dependencies]
clap = { version = "^4", features = ["cargo", "derive"] }
thiserror = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
toml = "0.8"
log = "0.4"
humantime = "2"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
image = "0.25"
crunch = "0.5"
walkdir = "2"
sha2 = "0.10"
regex = "1"
imagequant = "4"
lodepng = "3"
earcut = "0.4"
rayon = "1"

# hfrog mirror (always compiled — feature is opt-in via config.toml)
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "blocking", "rustls-tls"] }
dirs = "5"

# GUI preview (optional) — egui + eframe with wgpu backend
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "wgpu"] }
egui = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
