[package]
name = "omniplan_covers_ding"
version = "0.1.0"
edition = "2024"

[dependencies]
cli-common = { path = "/Users/admin/data0/private_work/crate-r-svr-api/cli-common" }
tokio = { version = "1" , features = ["rt", "macros", "rt-multi-thread"]}
csv = "1.3.1"
thiserror = "2.0.12"
strum = "0.27"
strum_macros = "0.27"
rust_xlsxwriter = "0.84.0"

[dev-dependencies]
chrono = {version = "0.4.40"}