[package]
name = "pgpour"
version = "0.1.1"
edition = "2024"
rust-version = "1.90.0"
description = "pgpour — Postgres CDC → Kafka pipeline (powered by supabase/etl)"

[features]
default = []
metric = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tikv-jemalloc-ctl",
]

[dependencies]
etl = { git = "https://github.com/supabase/etl" }

rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }

opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["metrics", "grpc-tonic"], optional = true }
russh = { version = "0.57.1", default-features = false, features = ["aws-lc-rs", "rsa"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
