[package]
name = "textexture"
version = "0.1.0"
edition = "2021"
description = "Generate stylized text images with visual effects (shadow, outline, gradient, glow, neon)"
license = "MIT"
repository = "https://github.com/nicholasgasior/r_lit"

[dependencies]
clap = { version = "^4", features = ["cargo", "derive"] }
thiserror = "^2"
log = "0.4"
fern = "0.7"
humantime = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Rendering
tiny-skia = "0.11"
cosmic-text = "0.12"
fontdb = "0.22"

# Color parsing
csscolorparser = "0.7"

# Image loading (for background images)
image = "0.25"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
