[package]
name = "ui-trim"
version = "0.1.0"
edition = "2021"
description = "Trim pseudo-transparent UI asset backgrounds into tight PNGs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
