[package]
name = "murmur"
version = "0.1.0"
edition = "2021"
authors = ["R_LIT Contributors"]
description = "Distributed P2P collaboration library with automatic leader election and CRDT synchronization"
license = "MIT OR Apache-2.0"
keywords = ["p2p", "crdt", "distributed", "collaboration", "sync"]
categories = ["network-programming", "database"]

[features]
default = ["redb-backend"]
sqlite-backend = ["rusqlite"]
redb-backend = ["redb"]
rocksdb-backend = ["rocksdb"]

[dependencies]
# P2P networking (只用 iroh-net，不用整个 iroh)
iroh-net = { version = "0.28", default-features = false, features = ["discovery-local-network"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"], default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }

# CRDT synchronization
automerge = { version = "0.5", default-features = false }

# Storage backends (optional)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
redb = { version = "2", optional = true }
rocksdb = { version = "0.22", optional = true }

# Serialization (精简)
serde = { version = "1", features = ["derive", "std"], default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
bincode = { version = "1", default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"], default-features = false }
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
anyhow = { version = "1", default-features = false, features = ["std"] }

# Service discovery - using iroh's built-in LocalSwarmDiscovery

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "group_chat"
path = "examples/group_chat.rs"

[[example]]
name = "shared_kv"
path = "examples/shared_kv.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "structured_data"
path = "examples/structured_data.rs"

[[example]]
name = "chat_room"
path = "examples/chat_room.rs"

[[example]]
name = "local_discovery"
path = "examples/local_discovery.rs"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
