[package]
name = "movie-maker"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "2.0.3"
serde = {version = "1.0.215",features = ["derive"]}
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11"
ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg.git" }
image = "0.25.5"
imageproc = "0.25.0"
tokio = { version = "1.41.1", features = ["fs","io-util","rt"] }
tween = "2.0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
pretty_assertions = "1"
sha2 = "0.10"
# tokio with macros/rt for async tests; the prod dep above keeps the lean feature set.
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }

# Profile config moved to workspace root Cargo.toml (see profile note there).

[[bin]]
name = "perf_main"          # 性能测试
path = "src/perf_main.rs"  # 二进制文件的源代码路径

[[bench]]
name = "encode_baseline"
harness = false

[[bench]]
name = "m1_quickwin"
harness = false

[[bench]]
name = "m2_profile_speed"
harness = false

